Ultimas alteracoes no swagger
